Have taken a different approach to the eliminate evidence click area issue. Using bootstraps grid system to try and expand to the full size of the button and still remain responsive. The click area now covers a percentage of the right side of the button, this should make it easier for people with larger fingers.

--- a/css/main-b2.8.css
+++ b/css/main-b2.8.css
@@ -24,16 +24,17 @@ html {
 }
 
 #evidence {
+    margin-bottom: 5px;
 }
 
 .btn-xl {
     font-size: 10pt;
-    padding: 10px 10px;
+    height: 100%;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
-#menu {
-    margin-bottom: 15px;
-}
+#menu {}
 
 .btn-menu,#resetButton {
     font-size: 10pt;
@@ -53,8 +54,11 @@ html {
 
 .btn-evidence {
     width: 100%;
-    margin-bottom: 20px;
     font-size: 11pt;
+    padding: 0;
+    height: 100%;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 #evidencePossibleContainer,#evidencePossible,#evidencePossible .badge {
@@ -65,7 +69,6 @@ html {
 
 .evidence-icon {
     font-size: 11pt;
-    margin-top: 5px;
 }
 
 .eliminate-icon {
@@ -73,18 +76,48 @@ html {
     color: #dc3545;
 }
 
+.evidence-outer-col {
+    margin-bottom: 10px;
+}
+
+.evidence-row {
+    height: 100%;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
 .btn-evidence > .sub-container {
-    padding: 5px 5px;
+
 }
 
 .btn-evidence > .evidence-name {
-    position: relative;
-    top: 5px;
+
 }
 
 .btn-evidence > .eliminate-lock {
-    padding-right: 10px;
-    padding-left: 10px;
+
+}
+
+.btn-evidence .evidence-col-1 {
+    padding-left: 5px;
+    padding-right: 0;
+    padding-top: 0;
+}
+
+.btn-evidence .evidence-col-1 .badge {
+    margin-top: 14px;
+}
+
+.btn-evidence .evidence-col-2 {
+    padding-top: 13px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.btn-evidence .evidence-col-3 {
+    padding-top: 13px;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 @media screen and (max-device-width: 768px) and (-webkit-device-pixel-ratio: 2) {
@@ -122,15 +155,27 @@ html {
     }
 
     .btn-evidence {
-        padding-left: 17px;
-        padding-right: 12px;
+        width: 100%;
+        font-size: 11pt;
+        padding: 0;
+        height: 100%;
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+
+    #evidence {
+        margin-bottom: 15px;
+    }
+
+    #menu {
+        margin-bottom: 10px;
     }
 }
 
 @media screen and (max-device-width: 768px) {
     .btn-xl {
         padding: 10px 10px;
-        font-size: 30px;
+        font-size: 25px;
         border-radius: 10px;
     }
 
@@ -162,7 +207,18 @@ html {
     }
 
     .btn-evidence {
-        padding-left: 17px;
-        padding-right: 12px;
+        width: 100%;
+        padding: 0;
+        height: 100%;
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+
+    #evidence {
+        margin-bottom: 15px;
+    }
+
+    #menu {
+        margin-bottom: 10px;
     }
 }
